<resources>
    <string name="app_name">Nbras</string>
    <string name="some_error">حدث خطأ</string>
    <string name="api_default_error">حدث خطأ</string>
    <string name="connection_error">فقد الاتصال بشبكة</string>
    <string name="api_retry_error">حاول مرة اخرى</string>
    <string name="username">اسم المستخدم</string>
    <string name="password">كلمة المرور</string>
    <string name="remember_password">لا اتذكر كلمة المرور</string>
    <string name="login">تسجيل الدخول</string>
    <string name="empty_username">برجاء ادخال اسم المستخدم</string>
    <string name="empty_password">برجاء ادخال كلمة المرور</string>
    <string name="empty_username_and_password">برجاء ادخال اسم المستخدم و كلمة المرور</string>
    <string name="empty_email">برجاء ادخال البريد الالكترونى</string>
    <string name="sent_rest_password">ارسال</string>
    <string name="email">البريد الالكترونى</string>
    <string name="dont_remeber_password">لا اتذكر كلمة المرور</string>
    <string name="title_activity_main">الرئسية</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_main">الرئسية</string>
    <string name="nav_courses">الدورات</string>
    <string name="nav_achievements">الانجازات</string>
    <string name="nav_profile">حسابى الشخصى</string>
    <string name="nav_exit">تسجيل الخروج</string>
    <string name="nav_sec_profile">الحسابى</string>
    <string name="font_name">fonts/NeoSansArabic.ttf</string>
    <string name="testTextVideo">الدرس الاول : حساب المثلثات الدوال المثلثية</string>
    <string name="test">نص تجريبي نص تجريبي نص تجريبي نص تجريبي نص تجريبي نص تجريبي نص تجريبي نص تجريبي نص تجريبي نص تجريبي نص تجريبي نص تجريبي نص تجريبي نص تجريبي نص تجريبي </string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="commentTranstionName">comment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="error_no_internet_connection">لا يوجد اتصال بالشبكة</string>
    <string name="error_username_password_incorrect">اسم المستخدم او كلمة المرور خاطئة</string>
</resources>
