<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.computec.eltadreb.ui.rest.RestPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/logoIV"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_margin="24dp"
            android:layout_gravity="center"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/rememberTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dont_remeber_password"
            android:textAlignment="center"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/edit_login_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="8dp"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/restPasswordB"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/btn_login_bg"
            android:text="@string/sent_rest_password"
            android:textColor="@color/whiteColor"
            android:textSize="20sp"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>
