<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.computec.eltadreb.ui.login.LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:cardBackgroundColor="@color/colorBackground"
        app:cardCornerRadius="4dp"
        app:contentPadding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoIV"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/logo_login"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/rememberTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/dont_remeber_password"
                android:textAlignment="center"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/edit_login_bg"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:textAlignment="center" />

            <Button
                android:id="@+id/restPasswordB"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/btn_login_bg"
                android:text="@string/sent_rest_password"
                android:textColor="@color/whiteColor"
                android:textSize="20sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>

